# swagger/v1/swagger.yaml
@@ -14,6 +14,64 @@ components:
       scheme: bearer
       bearerFormat: JWT
 paths:
+  "/api/v1/addresses":
+    post:
+      summary: Creates an Address
+      tags:
+      - Addresses
+      security:
+      - bearerAuth: []
+      parameters: []
+      responses:
+        '201':
+          description: address created
+        '422':
+          description: invalid request
+        '401':
+          description: unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                last_name:
+                  type: string
+                phone_number:
+                  type: string
+                email:
+                  type: string
+                  format: email
+                country:
+                  type: string
+                pincode:
+                  type: string
+                area:
+                  type: string
+                state:
+                  type: string
+                address:
+                  type: string
+                city:
+                  type: string
+                address_type:
+                  type: string
+                default:
+                  type: boolean
+              required:
+              - first_name
+              - last_name
+              - phone_number
+              - email
+              - country
+              - pincode
+              - area
+              - state
+              - address
+              - city
+              - address_type
   "/api/v1/contact_us":
     post:
       summary: Creates a Contact Us record
@@ -1964,6 +2022,20 @@ paths:
   "/api/v1/users/{id}/show_profile":
     get:
       summary: Show User Profile
+      tags:
+      - Users
+      security:
+      - bearerAuth: []
+      responses:
+        '200':
+          description: Profile data
+        '401':
+          description: Unauthorized
+        '422':
+          description: Unprocessable entity
+  "/api/v1/users/user_details":
+    get:
+      summary: Show User user_details
       tags:
       - Users
       security:
